<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tomatroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Tomatroid</string>
    <string name="menu_void">Void current action</string>
    <string name="menu_digram">Show Statistics</string>
    <string name="menu_database">Show Database Entrys</string>
    <string name="menu_theme">Show Theme List</string>
    <string name="delete_history">Delete History</string>
    <string name="title_activity_theme_list">ThemeList</string>
    <string name="title_activity_digram">DigramActivity</string>
    <string name="title_activity_statictic">StaticticActivity</string>
    <string name="title_activity_database_list">DatabaseList</string>
    <string name="theme_name">Theme Name</string>
    <string name="type">Type</string>
    <string name="new_theme">New Theme</string>
    <string name="theme_parent">Parent Theme</string>
    <string name="breaks">Breaks</string>
    <string name="pomodoros">Pomodoros</string>
    <string name="hide">Hide</string>
    <string name="show">Shown</string>
    <string name="name">Name</string>
    <string name="parent">Parent</string>
    <string name="save">Back &amp; Save</string>
    <string name="dataSaves">Your settings are saved</string>
    <string name="back">Back &amp; Discard</string>
    <string name="insert">Insert</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_theme">Delete Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="longbreak">Long Break</string>
    <string name="shortbreak">Short Break</string>
    <string name="tracking">Tracking</string>
    <string name="sleep">Sleep</string>
    <string name="pomodoro_length">Pomodoro Length</string>
    <string name="pomodoro_length_description">Length of an Pomodoro (in minutes)</string>
    <string name="longbreak_length">Long Break Length</string>
    <string name="longbreak_length_description">Length of the long break (in minutes)</string>
    <string name="shortbreak_length">Short Break Length</string>
    <string name="shortbreak_length_description">Length of the short break (in minutes)</string>
    <string name="pomodoro_until_break">Pomodoros until break</string>
    <string name="pomodoro_until_break_description">How many pomodoros do you want to make until the long break</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_description">Should your device vibrate if an Pomodoro is over?</string>
    <string name="sound">Sound</string>
    <string name="sound_description">Should your device play sounds if an Pomodoro is over?</string>
    <string name="airplanemode">Airplane Mode on Sleep</string>
    <string name="airplanemode_description">Should your device go into airplane mode when you go to sleep?</string>
    <string name="rememberTime_length">Remember interval</string>
    <string name="rememberTime_length_description">After a Countdown ended, when do you want to be reminded that it ended?\n(To make a pomodoro or take a break)</string>
    <string name="could_not_save_description">Could not save your input.\nPlease be sure to enter only numbers.</string>
    <string name="give_time_to_other_theme">Soll die Zeit einem anderen Thema zugeordnet werden?\n(Standard ist übergeordnetes Thema)</string>
	<string name="about">About</string> 
	<string name="today">Today</string> 
	<string name="yesterday">Yesterday</string> 
	<string name="update_dialog_title">New version installed</string> 
	<string name="sleep_shortbreak_will_ignore_type">Sleep and Shortbreak will ignore the theme</string> 
	<string name="calculate_with_children">Calculate statistics with children</string> 
    <string-array name="action_list">
        <item>Today\'s Summary</item>
        <item>Statistics</item>
        <item>Theme Manager</item>
        <item>Database Entrys</item>
        <item>Weekly Summary</item>
    </string-array>
    
    <string-array name="weekday_shortcut">
        <item>Mo</item>
        <item>Di</item>
        <item>Mi</item>
        <item>Do</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>So</item>
    </string-array>

    <string name="title_activity_weekly">WeeklyActivity</string>
    <string name="action_settings">Settings</string>

</resources>