<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Spinner
        android:id="@+id/typespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_shortbreak_will_ignore_type"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#cccccc"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Spinner
        android:id="@+id/themespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>